--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Desafío: Simulador interactivo</title>
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/regular-straight.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;600&family=Open+Sans&display=swap" rel="stylesheet">
   </head>
 
   <body>
