--- a/resultados.html
+++ b/resultados.html
@@ -175,6 +175,7 @@
   <script src="js/app.js"></script>
   <script type="text/javascript">
     getResults();
+    createfavorites();
   </script>
 </body>
 
