app && properties.json fixed

--- a/resultados.html
+++ b/resultados.html
@@ -166,7 +166,7 @@
     </div>
   </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script
+  <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwrs1G7Zr1WbsHEtyU8ckaRQ3-W9-Y0vg&callback=initMap"></script>
   <script src="https://unpkg.com/@googlemaps/markerwithlabel/dist/index.min.js"></script>
 
