--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
         </section>
       </section>
     </header>
+
+    <section class="favorites__wrapper">
+      <div class="close"> close</div>
+      <div id="favorites__wrapper--content"></div>
+    </section>
+
+
     <main id="app" role="main">
       <section
         class="hero"
@@ -188,6 +195,20 @@
       </section>
     </main>
 
+    
+    <template id="template-favorites">
+      <div class="flex flex-wrap justify-between py-4 mb-2">
+        <div class="favorites__image in-xs-5">
+          <img src="" alt="" title="">
+        </div>
+        <div class="in-xs-7">
+          <div class="favorites__name"></div>
+          <div class="favorites__price"></div>
+        </div>
+      </div>
+  
+    </template>
+  
     <footer id="footer" class="my-8 py-8 full-width">
       <div class="container mx-auto">
         <section class="flex flex-wrap">menu footer</section>
@@ -200,10 +221,12 @@
         </section>
       </div>
     </footer>
-
-    <script src="js/app.js"></script>
-    <script type="text/javascript">
-      getIndexFn();
-    </script>
+    <script crossorigin type="text/javascript"
+    src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="js/app.js"></script>
+  <script type="text/javascript">
+    getResults();
+    createfavorites();
+  </script>
   </body>
 </html>
