--- a/resultados.html
+++ b/resultados.html
@@ -75,10 +75,10 @@
         <button id="highPrice" class="button"></button>
         <button id="lessPrice" class="button"></button>
         <select name="zona" id="filterZone" class="button">
-          <option value="Filtrar por Zona" selected disabled>Filtrar por Zona</option>
+          
         </select>
         <select name="barrio" id="filterNeighborhood" class="button">
-          <option value="Filtrar por Barrios" selected disabled>Filtrar por Barrios</option>
+         
         </select>
 
 
@@ -173,7 +173,7 @@
 
   </template>
 
-
+<div id="llamada"></div>
   <footer id="footer" class=" py-8 full-width">
     <div class="container mx-auto px-4">
       <section class="flex flex-wrap">menu footer</section>
@@ -195,7 +195,7 @@
   <script src="js/points.js"></script>
 
   <script src="js/app.js"></script>
-  <script type="text/javascript">
+  <script>
     getResults();
     createfavorites();
   </script>
