--- a/index.html
+++ b/index.html
@@ -1,30 +1,38 @@
 <!DOCTYPE html>
 <html lang="es_ES">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Desafío: Simulador interactivo</title>
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/regular-straight.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;600&family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
-  </head>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Desafío: Simulador interactivo</title>
+		<link rel="stylesheet" href="css/main.css" />
+		<link rel="stylesheet" href="css/regular-straight.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;600&family=Open+Sans&display=swap"
+			rel="stylesheet"
+		/>
+	</head>
 
-  <body>
+	<body>
     <header class="flex flex-wrap">
       <section class="flex flex-wrap justify-between full-width items-center">
         <section class="logo">
-          <a href="index.html"> Logo</a>
+          <a href="index.html">
+            <svg class="jss158 jss5" focusable="false" viewBox="0 0 24 24" aria-hidden="true" role="presentation">
+              <path d="M12 10.9c-.61 0-1.1.49-1.1 1.1s.49 1.1 1.1 1.1c.61 0 1.1-.49 1.1-1.1s-.49-1.1-1.1-1.1zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm2.19 12.19L6 18l3.81-8.19L18 6l-3.81 8.19z"></path>
+              <path fill="none" d="M0 0h24v24H0z"></path></svg>
+          </a>
         </section>
-  
         <section class="flex flex-wrap items-center">
-          <section class="px-4"><i class="fi fi-rs-user"></i> Login</section>
-          <section id="getFavorites" class="px-4"><i class="fi fi-rs-heart"></i> <span class="hide"></span></section>
+          <section class="px-4">
+            <i class="fi fi-rs-user"></i>Login
+          </section>
+          <section id="getFavorites" class="px-4">
+            <i class="fi fi-rs-heart"></i>
+            <span class="hide"></span>
+          </section>
           <section class="switchTheme">
             <label class="switch">
               <input type="checkbox">
@@ -39,194 +47,132 @@
     </header>
 
     <section class="favorites__wrapper">
-      <div class="close"> close</div>
+      <div class="close">
+        <i class="fi fi-rs-cross-small"></i>
+      </div>
       <div id="favorites__wrapper--content"></div>
     </section>
 
-
-    <main id="app" role="main">
-      <section
-        class="hero"
-        style="background-image: url(assets/img/hero-banner-0.jpg"
-      ></section>
-      <section class="container mx-auto center">
-        <article id="listOf" class="content content--overlap px-6 py-6">
-          <div id="outputText"></div>
-          <div id="sort"></div>
-          <h2 class="px-4">Encuentra el lugar ideal para ti</h2>
-          <div class="list__places flex flex-wrap py-6">
-            <div class="list__places--item">
-              <a href="resultados.html">
-                <div class="px-4">
-                  <div class="list__places--item--picture"></div>
-                  <div class="list__places--item--text">
-                    <div>
-                      <h3>Barrio</h3>
-                    </div>
-                    <div>
-                      <p>Ver 100 propiedades</p>
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div>
-            <div class="list__places--item">
-              <a href="resultados.html">
-                <div class="px-4">
-                  <div class="list__places--item--picture"></div>
-                  <div class="list__places--item--text">
-                    <div>
-                      <h3>Barrio</h3>
-                    </div>
-                    <div>
-                      <p>Ver 100 propiedades</p>
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div>
-            <div class="list__places--item">
-              <a href="#">
-                <div class="px-4">
-                  <div class="list__places--item--picture"></div>
-                  <div class="list__places--item--text">
-                    <div>
-                      <h3>Barrio</h3>
-                    </div>
-                    <div>
-                      <p>Ver 100 propiedades</p>
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div>
-            <div class="list__places--item">
-              <a href="#">
-                <div class="px-4">
-                  <div class="list__places--item--picture"></div>
-                  <div class="list__places--item--text">
-                    <div>
-                      <h3>Barrio</h3>
-                    </div>
-                    <div>
-                      <p>Ver 100 propiedades</p>
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div>
-            <div class="list__places--item">
-              <a href="#">
-                <div class="px-4">
-                  <div class="list__places--item--picture"></div>
-                  <div class="list__places--item--text">
-                    <div>
-                      <h3>Barrio</h3>
-                    </div>
-                    <div>
-                      <p>Ver 100 propiedades</p>
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div>
+		<main id="app" role="main">
+			<section
+				class="hero"
+				style="background-image: url(assets/img/hero-banner-0.jpg"
+			>
+				<div class="search__form flex justify-center items-center">
+					<div class="search__form--wrapper">
+						<input type="text" placeholder="zona" class="input" />
+						<input type="text" placeholder="departamento" class="input" />
+						<input type="button" value="enviar" />
+					</div>
+				</div>
+			</section>
+			<section class="container mx-auto center">
+				<article id="listOf" class="content content--overlap px-6 py-6">
+					<div id="outputText"></div>
+					<div id="sort"></div>
+					<h2 class="px-4">Encuentra el lugar ideal para ti</h2>
+					<div class="list__places flex flex-wrap py-6">
+            <div class="loading"></div>
           </div>
-        </article>
-      </section>
-      <section class="container mx-auto center">
-        <ul class="flex justify-between py-8">
-          <li>
-            <div>
-              <span>
-                <i class="fi-rs-building"></i>
-              </span>
-              <div>
-                <h3>Tranquilidad</h3>
-                <span>
-                  Aprovecha nuestra Garantía Reserva con Confianza, que te
-                  brinda atención 24/7.
-                </span>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div>
-              <span>
-                <i class="fi-rs-marker"></i>
-              </span>
-              <div>
-                <h3>Tranquilidad</h3>
-                <span>
-                  Aprovecha nuestra Garantía Reserva con Confianza, que te
-                  brinda atención 24/7.
-                </span>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div>
-              <span>
-                <i class="fi-rs-key"></i>
-              </span>
-              <div>
-                <h3>Tranquilidad</h3>
-                <span>
-                  Aprovecha nuestra Garantía Reserva con Confianza, que te
-                  brinda atención 24/7.
-                </span>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div>
-              <span>
-                <i class="fi-rs-money"></i>
-              </span>
-              <div>
-                <h3>Tranquilidad</h3>
-                <span>
-                  Aprovecha nuestra Garantía Reserva con Confianza, que te
-                  brinda atención 24/7.
-                </span>
-              </div>
-            </div>
-          </li>
-        </ul>
-      </section>
-    </main>
+				</article>
+			</section>
+			<section class="container mx-auto center">
+				<ul class="flex flex-wrap py-8 valueProps__list">
+					<li class="valueProps__items">
+						<div>
+							<span class="valueProps__icon">
+								<i class="fi-rs-building"></i>
+							</span>
+							<div class="valueProps__item-text">
+								<h3 class="valueProps__title py-2">Ubicación</h3>
+								<span class="valueProps__subtitle">
+									Aprovecha nuestra Garantía Reserva con Confianza, que te
+									brinda atención 24/7.
+								</span>
+							</div>
+						</div>
+					</li>
+					<li class="valueProps__items">
+						<div>
+							<span class="valueProps__icon">
+								<i class="fi-rs-marker"></i>
+							</span>
+							<div class="valueProps__item-text">
+                <h3 class="valueProps__title py-2">Tranquilidad</h3>
+                <span class="valueProps__subtitle">
+									Aprovecha nuestra Garantía Reserva con Confianza, que te
+									brinda atención 24/7.
+								</span>
+							</div>
+						</div>
+					</li>
+          <li class="valueProps__items">
+						<div>
+							<span class="valueProps__icon">
+								<i class="fi-rs-key"></i>
+							</span>
+							<div class="valueProps__item-text">
+                <h3 class="valueProps__title py-2">Tranquilidad</h3>
+                <span class="valueProps__subtitle">
+									Aprovecha nuestra Garantía Reserva con Confianza, que te
+									brinda atención 24/7.
+								</span>
+							</div>
+						</div>
+					</li>
+          <li class="valueProps__items">
+						<div>
+              <span class="valueProps__icon">
+								<i class="fi-rs-money"></i>
+							</span>
+              <div class="valueProps__item-text">
+								<h3 class="valueProps__title py-2">Tranquilidad</h3>
+                <span class="valueProps__subtitle">
+									Aprovecha nuestra Garantía Reserva con Confianza, que te
+									brinda atención 24/7.
+								</span>
+							</div>
+						</div>
+					</li>
+				</ul>
+			</section>
+		</main>
 
-    
-    <template id="template-favorites">
-      <div class="flex flex-wrap justify-between py-4 mb-2">
-        <div class="favorites__image in-xs-5">
-          <img src="" alt="" title="">
-        </div>
-        <div class="in-xs-7">
-          <div class="favorites__name"></div>
-          <div class="favorites__price"></div>
-        </div>
-      </div>
-  
-    </template>
-  
-    <footer id="footer" class="my-8 py-8 full-width">
-      <div class="container mx-auto">
-        <section class="flex flex-wrap">menu footer</section>
-        <section class="flex flex-wrap justify-between">
-          <p>
-            &copy; 2021 Alquileo - <a href="#">Privacidad</a>
-            <a href="#"> Términos</a> <a href="#">Mapa del sitio</a>
-          </p>
-          <p>Hecho con <i class="fi fi-rs-heart"></i> por Jo Repossi</p>
-        </section>
-      </div>
-    </footer>
-    <script crossorigin type="text/javascript"
-    src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="js/app.js"></script>
-  <script type="text/javascript">
-    getResults();
-    createfavorites();
-  </script>
-  </body>
+		<template id="template-favorites">
+			<div class="flex flex-wrap justify-between py-4 mb-2">
+				<div class="favorites__image in-xs-5">
+					<img src="" alt="" title="" />
+				</div>
+				<div class="in-xs-7">
+					<div class="favorites__name"></div>
+					<div class="favorites__price"></div>
+				</div>
+			</div>
+		</template>
+
+		<footer id="footer" class="my-8 py-8 full-width">
+			<div class="container mx-auto">
+				<section class="flex flex-wrap">menu footer</section>
+				<section class="flex flex-wrap justify-between">
+					<p>
+						&copy; 2021 Alquileo -
+						<a href="#">Privacidad</a>
+						<a href="#">Términos</a>
+						<a href="#">Mapa del sitio</a>
+					</p>
+					<p>
+						Hecho con
+						<i class="fi fi-rs-heart"></i>
+						por Jo Repossi
+					</p>
+				</section>
+			</div>
+		</footer>
+		<script
+			crossorigin
+			type="text/javascript"
+			src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+		></script>
+		<script src="js/app.js"></script>
+	</body>
 </html>
