--- a/resultados.html
+++ b/resultados.html
@@ -9,34 +9,16 @@
     <link rel="stylesheet" href="css/regular-straight.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;600&family=Open+Sans&display=swap" rel="stylesheet">
     <style>
-      .label {
-        color: #000;
-        background-color: #fff;
-        border-radius: 50px;
-        font-weight: 900;
-        font-size: 12px;
-        text-align: center;
-        white-space: nowrap;
-        padding: 10px
-      }
-
-      .label.white {
-        background-color: #fff;
-        box-shadow: 0 0 15px 2px rgba(0, 0, 0, .3)
-      }
-
-      .label.white:hover {
-        transform: scale(2);
-        transition: all .3s ease-in-out;
-        background-color: #000
-      }
+      
     </style>
   </head>
   <body>
     <header class="flex flex-wrap">
       <section class="flex flex-wrap justify-between full-width items-center">
         <section class="logo">
-          <a href="index.html">Logo</a>
+          <a href="index.html">
+            <svg class="jss158 jss5" focusable="false" viewBox="0 0 24 24" aria-hidden="true" role="presentation"><path d="M12 10.9c-.61 0-1.1.49-1.1 1.1s.49 1.1 1.1 1.1c.61 0 1.1-.49 1.1-1.1s-.49-1.1-1.1-1.1zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm2.19 12.19L6 18l3.81-8.19L18 6l-3.81 8.19z"></path><path fill="none" d="M0 0h24v24H0z"></path></svg>
+          </a>
         </section>
         <section class="flex flex-wrap items-center">
           <section class="px-4">
@@ -58,10 +40,16 @@
         </section>
       </section>
     </header>
+
+
     <section class="favorites__wrapper">
-      <div class="close">close</div>
+      <div class="close">
+        <i class="fi fi-rs-cross-small"></i>
+      </div>
       <div id="favorites__wrapper--content"></div>
     </section>
+
+
     <main id="app" role="main" class="flex direction-column">
       <section id="filters">
         <section class="flex filters__container flex-wrap items-center">
@@ -89,6 +77,8 @@
         </div>
       </section>
     </main>
+
+
     <template id="template-results">
       <div class="results__column--item">
         <div class="flex flex-wrap items-center">
@@ -122,11 +112,11 @@
                   </div>
                 </div>
                 <div class="flex-grow">
-                  <p class="results__item--text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                  <p class="results__item--text t-normal">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
                 <div id="results__item--buttons" class="flex justify-between full">
                   <a class="button">telefono</a>
-                  <a href="#" class="button button--active " data-link="">ver propiedad</a>
+                  <a href="page.html" class="button button--active " data-link="">ver propiedad</a>
                 </div>
               </div>
             </div>
@@ -135,7 +125,7 @@
       </div>
     </template>
     <template id="template-favorites">
-      <div class="flex flex-wrap justify-between py-4 mb-2">
+      <div class="flex flex-wrap justify-between py-4 mb-2 template-favorites ">
         <div class="favorites__image in-xs-5">
           <img src="" alt="" title="">
         </div>
@@ -145,8 +135,9 @@
         </div>
       </div>
     </template>
-    <div id="llamada"></div>
+   
     <footer id="footer" class="py-8 full-width">
+    
       <div class="container mx-auto px-4">
         <section class="flex flex-wrap">menu footer</section>
         <section class="flex flex-wrap justify-between">
@@ -159,7 +150,7 @@
       </div>
     </footer>
     <script crossorigin type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script async defer="defer" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwrs1G7Zr1WbsHEtyU8ckaRQ3-W9-Y0vg&callback=initMap"></script>
+    <script async defer="defer" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwrs1G7Zr1WbsHEtyU8ckaRQ3-W9-Y0vg&amp;libraries=geometry,visualization,places"></script>
     <script src="https://unpkg.com/@googlemaps/markerwithlabel/dist/index.min.js"></script>
     <script src="js/points.js"></script>
     <script src="js/app.js"></script>
