--- a/resultados.html
+++ b/resultados.html
@@ -1,36 +1,46 @@
 <!DOCTYPE html>
 <html lang="es_ES">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Alquileo | Propiedades | Alquilar nunca fue tán fácil</title>
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/regular-straight.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;600&family=Open+Sans&display=swap" rel="stylesheet">
-    <style>
-      
-    </style>
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/regular-straight.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;600&family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <style></style>
   </head>
   <body>
     <header class="flex flex-wrap">
       <section class="flex flex-wrap justify-between full-width items-center">
         <section class="logo">
           <a href="index.html">
-            <svg class="jss158 jss5" focusable="false" viewBox="0 0 24 24" aria-hidden="true" role="presentation"><path d="M12 10.9c-.61 0-1.1.49-1.1 1.1s.49 1.1 1.1 1.1c.61 0 1.1-.49 1.1-1.1s-.49-1.1-1.1-1.1zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm2.19 12.19L6 18l3.81-8.19L18 6l-3.81 8.19z"></path><path fill="none" d="M0 0h24v24H0z"></path></svg>
+            <svg
+              class="jss158 jss5"
+              focusable="false"
+              viewBox="0 0 24 24"
+              aria-hidden="true"
+              role="presentation"
+            >
+              <path
+                d="M12 10.9c-.61 0-1.1.49-1.1 1.1s.49 1.1 1.1 1.1c.61 0 1.1-.49 1.1-1.1s-.49-1.1-1.1-1.1zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm2.19 12.19L6 18l3.81-8.19L18 6l-3.81 8.19z"
+              ></path>
+              <path fill="none" d="M0 0h24v24H0z"></path>
+            </svg>
           </a>
         </section>
         <section class="flex flex-wrap items-center">
-          <section class="px-4">
-            <i class="fi fi-rs-user"></i>Login
-          </section>
+          <section class="px-4"><i class="fi fi-rs-user"></i>Login</section>
           <section id="getFavorites" class="px-4">
             <i class="fi fi-rs-heart"></i>
             <span class="hide"></span>
           </section>
           <section class="switchTheme">
             <label class="switch">
-              <input type="checkbox">
+              <input type="checkbox" />
               <span class="slider round"></span>
             </label>
           </section>
@@ -41,14 +51,13 @@
       </section>
     </header>
 
-
     <section class="favorites__wrapper">
       <div class="close">
         <i class="fi fi-rs-cross-small"></i>
       </div>
+      <p>Favoritos</p>
       <div id="favorites__wrapper--content"></div>
     </section>
-
 
     <main id="app" role="main" class="flex direction-column">
       <section id="filters">
@@ -72,12 +81,14 @@
             </div>
           </div>
         </div>
-        <div id="mapa" class="in-md-12 in-sm-12 in-lg-6 in-xl-7 in-xs-12 flex justify-center items-center">
+        <div
+          id="mapa"
+          class="in-md-12 in-sm-12 in-lg-6 in-xl-7 in-xs-12 flex justify-center items-center"
+        >
           <div class="map__content">mapa</div>
         </div>
       </section>
     </main>
-
 
     <template id="template-results">
       <div class="results__column--item">
@@ -86,7 +97,7 @@
           <div class="in-md-12 in-sm-12 in-lg-12 in-xl-6 in-xs-12">
             <div class="results__column--img">
               <picture>
-                <img src="assets/img/spinner.gif" alt="" class="" data-img>
+                <img src="assets/img/spinner.gif" alt="" class="" data-img />
               </picture>
             </div>
           </div>
@@ -96,7 +107,9 @@
                 <div class="full-width">
                   <span class="results__item--type"></span>
                   <p class="results__item--title">Titulo</p>
-                  <div class="results__items--price-wrapper flex flex-wrap justify-between">
+                  <div
+                    class="results__items--price-wrapper flex flex-wrap justify-between"
+                  >
                     <div>
                       <span class="flex">
                         <i class="fi-rs-marker"></i>
@@ -112,11 +125,21 @@
                   </div>
                 </div>
                 <div class="flex-grow">
-                  <p class="results__item--text t-normal">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                  <p class="results__item--text t-normal">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  </p>
                 </div>
-                <div id="results__item--buttons" class="flex justify-between full">
-                  <a class="button">telefono</a>
-                  <a href="page.html" class="button button--active " data-link="">ver propiedad</a>
+                <div
+                  id="results__item--buttons"
+                  class="flex justify-between full"
+                >
+                  <a class="btn">telefono</a>
+                  <a
+                    href="page.html?page="
+                    class="button button--active"
+                    data-link=""
+                    >ver propiedad</a
+                  >
                 </div>
               </div>
             </div>
@@ -124,38 +147,56 @@
         </div>
       </div>
     </template>
+
     <template id="template-favorites">
-      <div class="flex flex-wrap justify-between py-4 mb-2 template-favorites ">
-        <div class="favorites__image in-xs-5">
-          <img src="" alt="" title="">
+      <div class="flex flex-wrap justify-between py-4 mb-2">
+        <div class="favorites__image in-xs-4">
+          <img src="" alt="" title="" />
         </div>
-        <div class="in-xs-7">
-          <div class="favorites__name"></div>
-          <div class="favorites__price"></div>
+        <div class="in-xs-8 favorites__wrapper--inner-content">
+          <div class="in-xs-9 px-0">
+            <div class="favorites__name"></div>
+            <div class="favorites__price"></div>
+          </div>
+          <div class="in-xs-3">
+            <div class="delete__favorite">
+              <buttom class="delete"
+                ><i class="fi fi-rs-cross-small"></i
+              ></buttom>
+            </div>
+          </div>
         </div>
       </div>
     </template>
-   
+
     <footer id="footer" class="py-8 full-width">
-    
       <div class="container mx-auto px-4">
         <section class="flex flex-wrap">menu footer</section>
         <section class="flex flex-wrap justify-between">
-          <p>&copy; 2021 Alquileo - <a href="#">Privacidad</a>
+          <p>
+            &copy; 2021 Alquileo - <a href="#">Privacidad</a>
             <a href="#">Términos</a>
             <a href="#">Mapa del sitio</a>
           </p>
-          <p>Hecho con <i class="fi fi-rs-heart"></i>por Jo Repossi </p>
+          <p>Hecho con <i class="fi fi-rs-heart"></i>por Jo Repossi</p>
         </section>
       </div>
     </footer>
-    <script crossorigin type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script async defer="defer" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwrs1G7Zr1WbsHEtyU8ckaRQ3-W9-Y0vg&amp;libraries=geometry,visualization,places"></script>
+    <script
+      crossorigin
+      type="text/javascript"
+      src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+    ></script>
+    <script
+      async
+      defer="defer"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwrs1G7Zr1WbsHEtyU8ckaRQ3-W9-Y0vg&amp;libraries=geometry,visualization,places"
+    ></script>
     <script src="https://unpkg.com/@googlemaps/markerwithlabel/dist/index.min.js"></script>
     <script src="js/points.js"></script>
     <script src="js/app.js"></script>
     <script>
-      getResults(), createfavorites()
+      getResults(), createfavorites();
     </script>
   </body>
 </html>
