--- a/resultados.html
+++ b/resultados.html
@@ -33,7 +33,7 @@
           </a>
         </section>
         <section class="flex flex-wrap items-center">
-          <section class="px-4"><i class="fi fi-rs-user"></i>Login</section>
+          <section class="px-4"><i class="fi fi-rs-user"></i></section>
           <section id="getFavorites" class="px-4">
             <i class="fi fi-rs-heart"></i>
             <span class="hide"></span>
