--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </a>
         </section>
         <section class="flex flex-wrap items-center">
-          <section class="px-4"><i class="fi fi-rs-user"></i>Login</section>
+          <section class="px-4"><i class="fi fi-rs-user"></i></section>
           <section id="getFavorites" class="px-4">
             <i class="fi fi-rs-heart"></i>
             <span class="hide"></span>
@@ -64,15 +64,7 @@
       <section
         class="hero"
         style="background-image: url(assets/img/hero-banner-0.jpg"
-      >
-        <div class="search__form flex justify-center items-center">
-          <div class="search__form--wrapper">
-            <input type="text" placeholder="zona" class="input" />
-            <input type="text" placeholder="departamento" class="input" />
-            <input type="button" value="enviar" />
-          </div>
-        </div>
-      </section>
+      ></section>
       <section class="container mx-auto center">
         <article id="listOf" class="content content--overlap px-6 py-6">
           <div id="outputText"></div>
@@ -84,7 +76,7 @@
         </article>
       </section>
       <section class="container mx-auto center">
-        <ul class="flex flex-wrap py-8 valueProps__list">
+        <ul class="flex flex-wrap py-8 px-4 valueProps__list">
           <li class="valueProps__items">
             <div>
               <span class="valueProps__icon">
@@ -93,8 +85,8 @@
               <div class="valueProps__item-text">
                 <h3 class="valueProps__title py-2">Ubicación</h3>
                 <span class="valueProps__subtitle">
-                  Aprovecha nuestra Garantía Reserva con Confianza, que te
-                  brinda atención 24/7.
+                  Ofrece una muy buena ubicación. Tenemos cerca centros
+                  comerciales, supermercados y calles muy iluminadas
                 </span>
               </div>
             </div>
@@ -105,24 +97,10 @@
                 <i class="fi-rs-marker"></i>
               </span>
               <div class="valueProps__item-text">
-                <h3 class="valueProps__title py-2">Tranquilidad</h3>
+                <h3 class="valueProps__title py-2">Seguridad</h3>
                 <span class="valueProps__subtitle">
-                  Aprovecha nuestra Garantía Reserva con Confianza, que te
-                  brinda atención 24/7.
-                </span>
-              </div>
-            </div>
-          </li>
-          <li class="valueProps__items">
-            <div>
-              <span class="valueProps__icon">
-                <i class="fi-rs-key"></i>
-              </span>
-              <div class="valueProps__item-text">
-                <h3 class="valueProps__title py-2">Tranquilidad</h3>
-                <span class="valueProps__subtitle">
-                  Aprovecha nuestra Garantía Reserva con Confianza, que te
-                  brinda atención 24/7.
+                  Ubicaciones en barrios privados con vigilancias 24/7, entrada
+                  computarizada y alarmas vecinales.
                 </span>
               </div>
             </div>
@@ -131,6 +109,21 @@
             <div>
               <span class="valueProps__icon">
                 <i class="fi-rs-money"></i>
+              </span>
+              <div class="valueProps__item-text">
+                <h3 class="valueProps__title py-2">Pagos Seguros</h3>
+                <span class="valueProps__subtitle">
+                  Nuestro sistema de pago electrónico cuenta con aviso
+                  inteligente, vos paga tranquilo y disfrutá desde tu casa.
+                </span>
+              </div>
+            </div>
+          </li>
+
+          <li class="valueProps__items">
+            <div>
+              <span class="valueProps__icon">
+                <i class="fi-rs-key"></i>
               </span>
               <div class="valueProps__item-text">
                 <h3 class="valueProps__title py-2">Tranquilidad</h3>
@@ -160,9 +153,8 @@
       </div>
     </template>
 
-    <footer id="footer" class="my-8 py-8 full-width">
+    <footer id="footer" class="py-8 full-width">
       <div class="container mx-auto">
-        <section class="flex flex-wrap">menu footer</section>
         <section class="flex flex-wrap justify-between">
           <p>
             &copy; 2021 Alquileo -
