--- a/page.html
+++ b/page.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Alquileo | Propiedad | Alquilar nunca fue tán fácil</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,6 +12,7 @@
       rel="stylesheet"
     />
   </head>
+
   <body>
     <header class="flex flex-wrap">
       <section class="flex flex-wrap justify-between full-width items-center">
@@ -31,7 +33,7 @@
           </a>
         </section>
         <section class="flex flex-wrap items-center">
-          <section class="px-4"><i class="fi fi-rs-user"></i>Login</section>
+          <section class="px-4"><i class="fi fi-rs-user"></i></section>
           <section id="getFavorites" class="px-4">
             <i class="fi fi-rs-heart"></i>
             <span class="hide"></span>
@@ -58,9 +60,142 @@
 
     <main id="app" role="main">
       <section class="container mx-auto center">
-        <div id="root" class="px-4"></div>
+        <div id="root" class="px-4">
+          <div id="pageInfo"></div>
+          <div>
+            <form>
+              <input type="text" placeholder="nombre" id="name" name="name" />
+              <input type="email" placeholder="email" id="email" name="email" />
+              <button type="button" class="send">
+                quiero agendar una cita
+              </button>
+            </form>
+          </div>
+        </div>
+      </section>
+
+      <section class="container mx-auto center">
+        <ul class="flex flex-wrap py-8 px-4 valueProps__list">
+          <li class="valueProps__items">
+            <div>
+              <span class="valueProps__icon">
+                <i class="fi-rs-building"></i>
+              </span>
+              <div class="valueProps__item-text">
+                <h3 class="valueProps__title py-2">Ubicación</h3>
+                <span class="valueProps__subtitle">
+                  Ofrece una muy buena ubicación. Tenemos cerca centros
+                  comerciales, supermercados y calles muy iluminadas
+                </span>
+              </div>
+            </div>
+          </li>
+          <li class="valueProps__items">
+            <div>
+              <span class="valueProps__icon">
+                <i class="fi-rs-marker"></i>
+              </span>
+              <div class="valueProps__item-text">
+                <h3 class="valueProps__title py-2">Seguridad</h3>
+                <span class="valueProps__subtitle">
+                  Ubicaciones en barrios privados con vigilancias 24/7, entrada
+                  computarizada y alarmas vecinales.
+                </span>
+              </div>
+            </div>
+          </li>
+          <li class="valueProps__items">
+            <div>
+              <span class="valueProps__icon">
+                <i class="fi-rs-money"></i>
+              </span>
+              <div class="valueProps__item-text">
+                <h3 class="valueProps__title py-2">Pagos Seguros</h3>
+                <span class="valueProps__subtitle">
+                  Nuestro sistema de pago electrónico cuenta con aviso
+                  inteligente, vos paga tranquilo y disfrutá desde tu casa.
+                </span>
+              </div>
+            </div>
+          </li>
+
+          <li class="valueProps__items">
+            <div>
+              <span class="valueProps__icon">
+                <i class="fi-rs-key"></i>
+              </span>
+              <div class="valueProps__item-text">
+                <h3 class="valueProps__title py-2">Tranquilidad</h3>
+                <span class="valueProps__subtitle">
+                  Aprovecha nuestra Garantía Reserva con Confianza, que te
+                  brinda atención 24/7.
+                </span>
+              </div>
+            </div>
+          </li>
+        </ul>
       </section>
     </main>
+
+    <template id="content">
+      <div class="flex justify-between items-center py-8 px-4">
+        <div class="page__title">
+          <h2></h2>
+          <div class="page__location--content">
+            <i class="fi-rs-marker"></i> <span class="page__address"></span>
+            <span class="page__separator--items"></span>
+            <span class="page__location"></span>
+            <span class="page__separator--items"></span>
+            <span class="page__city"></span>
+          </div>
+        </div>
+        <div class="flex">
+          <div class="prev">
+            <a href=""> </a>
+          </div>
+          <div class="next">
+            <a href=""> </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="flex flex-wrap">
+        <div class="page cover__first in-xs-12 in-md-8">
+          <img src="" alt="" />
+        </div>
+        <div class="in-xs-12 in-md-4">
+          <ul class="page__thumbs">
+            <li><img src="" alt="" class="img-first" /></li>
+            <li><img src="" alt="" class="img-second" /></li>
+            <li><img src="" alt="" class="img-third" /></li>
+            <li><img src="" alt="" class="img-four" /></li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="flex">
+        <div class="page__info in-xs-12 in-md-8 my-8">
+          <p class="page__type"></p>
+          <div class="page__price--block">
+            <span class="page__currency"></span>
+            <span
+              ><span class="page__price"></span>
+              <span class="page__small--info">+ Expensas</span></span
+            >
+          </div>
+          <div class="flex flex-wrap">
+            <p class="page__room--info">
+              <span class="page__bedrooms"></span> Habitaciones
+              <span class="page__separator--items"></span>
+              <span class="page__bathrooms"></span> Baño
+            </p>
+          </div>
+          <div class="page__separator">
+            <p class="results__item--text t-normal"></p>
+          </div>
+        </div>
+      </div>
+    </template>
 
     <template id="template-favorites">
       <div class="flex flex-wrap justify-between py-4 mb-2">
@@ -82,9 +217,9 @@
         </div>
       </div>
     </template>
+
     <footer id="footer" class="py-8 full-width">
       <div class="container mx-auto px-4">
-        <section class="flex flex-wrap">menu footer</section>
         <section class="flex flex-wrap justify-between">
           <p>
             &copy; 2021 Alquileo - <a href="#">Privacidad</a>
@@ -95,6 +230,7 @@
         </section>
       </div>
     </footer>
+
     <script
       crossorigin
       type="text/javascript"
@@ -106,7 +242,7 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwrs1G7Zr1WbsHEtyU8ckaRQ3-W9-Y0vg&amp;libraries=geometry,visualization,places"
     ></script>
     <script src="https://unpkg.com/@googlemaps/markerwithlabel/dist/index.min.js"></script>
-    <script src="js/points.js"></script>
+
     <script src="js/app.js"></script>
     <script>
       createfavorites();
